# from-thesis-to-paper

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  fttp.config.example.json  pyproject.toml  pytest.ini
.cursor/plans/: from-thesis-to-paper_master.plan.md  from-thesis-to-paper_orchestration.plan.md
.cursor/rules/: bilingual-agent-interaction.mdc  fttp-non-negotiables.mdc  plan-and-subagent-orchestration.mdc  translation.mdc
docs/: ARCHITECTURE.md  EXECUTOR_GUIDE.md  MCP_OVERLEAF_OPTIONAL.md  MCP_SHELBY_OPTIONAL.md  ONBOARDING.md  ONBOARDING_RATIONALE.md  OVERLEAF_MCP_SETUP.md  OVERLEAF_PROJECT_ID.md  PACKS.md  PAPER_PRODUCTION_PIPELINE.md  PORTFOLIO.md  TESTING.md  TRANSLATION_GUIDE.md  USER_APPROVAL_GATES.md  VENUE_TEMPLATE_ONBOARDING.md  WORKSPACE_EXAMPLE_PAPEREPN.md  WORKSPACE_MODEL.md  creacion-de-agentes.md  sync_cursor_claude.md
examples/: README.md  paperepn-external.config.json  sample-workspace.config.json
python/fttp/: __init__.py  __main__.py  cli.py  commands.py  config.py  env_suggest.py  pipeline.py  scaffold.py  venue_validate.py
scripts/: run_tests.sh
skills/core/: agent-intake.md  evidence-archaeologist.md  evidence-join-auditor.md  paper-strategy.md  (+4 more)
templates/: workspace.config.example.json
tests/: test_config.py  test_doctor_extended.py  test_env_suggest.py  test_evidence_csv_lineage.py  test_evidence_gurobi_status.py  test_hooks_schema.py  test_latex_gates_template.py  test_lineage_cli.py  test_run_hook.py  test_scaffold.py  test_venue_profiles.py  test_venue_template.py  test_venue_validate_cli.py  test_workflow_profile.py
(+58 files in other folders)
