[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fttp"
version = "0.1.0"
description = "from-thesis-to-paper: config and paper pipeline CLI stubs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fttp = "fttp.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
